@@ -1,3 +1,6 @@
+Aug 26, 2022
+  parser: tuned up logging
+
 Aug 01, 2022
   parser: better handling of MESH ids
   EFO-to-RDO mapper: finished EFO-to-MP and EFO-to-HP mappers
